--- a/labs/lab4-wspr/Makefile
+++ b/labs/lab4-wspr/Makefile
@@ -1,6 +1,9 @@
 WSPRFILE=	ALL_WSPR.TXT
 IQFILE=		data/iq-16b.wav
 
+qemu-run:
+	qemu-system-aarch64 -M virt -cpu cortex-a53 -m 1G -initrd initrd.img-5.10.0-11-arm64 -kernel vmlinuz-5.10.0-11-arm64 -append "root=/dev/vda2 console=ttyAMA0" -drive if=virtio,file=debian-3607-aarch64-lab1.qcow2,format=qcow2,id=hd -net user,hostfwd=tcp::10022-:22 -net nic -device intel-hda -device hda-duplex -nographic
+
 wspr:
 	(cd wsprcan; make)
 	sox $(IQFILE) -c 1 -t wav -r 12000 -b 16 mono.wav
