--- a/labs/lab4-wspr/Makefile
+++ b/labs/lab4-wspr/Makefile
@@ -11,10 +11,11 @@ qemu-run:
 	qemu-system-aarch64 -M virt -cpu cortex-a53 -m 1G -initrd initrd.img-5.10.0-11-arm64 -kernel vmlinuz-5.10.0-11-arm64 -append "root=/dev/vda2 console=ttyAMA0" -drive if=virtio,file=debian-3607-aarch64-lab1.qcow2,format=qcow2,id=hd -net user,hostfwd=tcp::10022-:22 -net nic -device intel-hda -device hda-duplex -nographic
 
 run:
-	(cd wsprcan; make)
+	(cd pa-wsprcan; make)
 	bash wsprwait | tee -a wsprwait.out
 
 clean:
 	(cd parecfile; make clean)
 	(cd wsprcan; make clean)
+	(cd pa-wsprcan; make clean)
 	-rm -f ALL_WSPR.TXT data/wf*.wav wspr_spots.txt wspr_timer.out wsprwait.out
