--- a/labs/lab4-wspr/pa-wsprcan/Makefile
+++ b/labs/lab4-wspr/pa-wsprcan/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 
 CFLAGS= -I/usr/local/include -Wall -Wextra -std=c99 -pedantic -O3 -ffast-math
 LDFLAGS = -L/usr/local/lib 
-LIBS = -lfftw3 -lm 
+LIBS = -lfftw3 -lm -lpulse-simple -lpulse
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
@@ -15,7 +15,7 @@ OBJS2 = wsprsim.o wsprsim_utils.o wsprd_utils.o tab.o fano.o nhash.o
 wsprsim: $(OBJS2)
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS) $(LIBS)
 
-OBJS3 = wsprd.o wsprsim_utils.o wsprd_utils.o tab.o fano.o jelinek.o nhash.o
+OBJS3 = parec.o wsprd.o wsprsim_utils.o wsprd_utils.o tab.o fano.o jelinek.o nhash.o
 k9an-wsprd: $(OBJS3)
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS) $(LIBS)
 
