--- a/labs/lab4-wspr/pa-wsprcan/Makefile
+++ b/labs/lab4-wspr/pa-wsprcan/Makefile
@@ -9,6 +9,10 @@ LIBS = -lfftw3 -lm -lpulse-simple -lpulse
 
 all:    k9an-wsprd wsprsim
 
+patest:
+	paplay ../data/iq-16b.wav&
+	./k9an-wsprd
+
 DEPS =  wsprsim_utils.h wsprd_utils.h fano.h jelinek.h
 
 OBJS2 = wsprsim.o wsprsim_utils.o wsprd_utils.o tab.o fano.o nhash.o
