update labs 0 and 1

--- a/labs/lab1-gpio/Makefile
+++ b/labs/lab1-gpio/Makefile
@@ -1,23 +1,13 @@
-CFLAGS = -Wall -g `pkg-config --cflags gtk+-3.0` -lm -lpthread
-LDFLAGS = `pkg-config --libs gtk+-3.0` -lgpiod -lpthread
-DISPLAY = gpio_ssd.o
+CFLAGS =-Wall -g 
+LDFLAGS = -lgpiod 
 
-all: gpio_blink gpio_count 
+all: libgpiod_blink mmap_blink
 
-gpio_count:	gpio_count.o $(DISPLAY)
-	$(CC) -o $@ $< $(DISPLAY) $(LDFLAGS)
+mmap_blink:	mmap_blink.o 
+	$(CC) -o $@ $< 
 
-gpio_blink:	gpio_blink.o $(DISPLAY)
-	$(CC) -o $@ $< $(DISPLAY) $(LDFLAGS)
-
-copyto:
-	scp -P 10022 -r ../lab1 elec3607@localhost:lab1/
-
-copyfrom:
-	scp -P 10022 -r elec3607@localhost:lab1/'*.c' .
-
-ssh:
-	ssh -Y elec3607@localhost -p 10022
+libgpiod_blink:	libgpiod_blink.o 
+	$(CC) -o $@ $< $(LDFLAGS)
 
 # Define a pattern rule that compiles every .c file into a .o file
 %.o : %.c
@@ -26,4 +16,4 @@ ssh:
 clean:
 	rm -f *~
 	rm -f *.o
-	rm -rf ssd ssd.dSYM gpio_blink gpio_count lab1 gpio_ssd
+	rm -rf libgpiod_blink mmap_blink
