--- a/labs/lab2-i2c/Makefile
+++ b/labs/lab2-i2c/Makefile
@@ -1,8 +1,4 @@
-obj-m += i2c-stub.o
-KVERSION = $(shell uname -r)
-all:
-	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
 i2cread:	i2cread.o
 	$(CC) -o $@ $< -li2c
 clean:
-	make -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
+	rm i2cread *.o
